SEO, Readability, and minor bug fixes

--- a/css/MainStyle.css
+++ b/css/MainStyle.css
@@ -393,4 +393,8 @@ nav ul li.active {
         height: 16px;
         width: 16px;
     }
+
+    .center-align-s{
+        text-align:center;
+    }
 }
